--- a/package.json
+++ b/package.json
@@ -8,9 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
     "core-js": "^3.6.5",
+    "jssha": "^3.2.0",
+    "leaflet": "^1.7.1",
+    "mitt": "^3.0.0",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.0-0"
+    "vue-axios": "^3.4.0",
+    "vue-router": "^4.0.0-0",
+    "wicket": "^1.3.8"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
